<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity"
        android:background="@color/primaryBackground">

        <TextView
            android:id="@+id/D_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_back"
            android:background="@color/secondaryBackground"/>

        <ImageView
            android:id="@+id/D_img1"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_below="@id/D_tv1"
            android:src="@drawable/hero"/>

        <TextView
            android:id="@+id/D_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/D_img1"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            android:layout_marginStart="17dp"/>

        <TextView
            android:id="@+id/D_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/D_tv2"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="17dp"/>

        <LinearLayout
            android:id="@+id/D_ly1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/D_tv3"
            android:layout_marginTop="26dp"
            android:layout_marginStart="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre1"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="23dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/D_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_ly1"
            android:text="@string/aboutGame"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="17dp"/>

        <TextView
            android:id="@+id/D_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv4"
            android:layout_marginStart="17dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="17dp"
            android:text="@string/paragraph1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/D_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv5"
            android:text="@string/paragraph2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv6"
            android:text="@string/paragraph3"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv7"
            android:text="@string/paragraph4"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv8"
            android:text="Developers"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv9"
            android:text="FromSoftware"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="9dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv10"
            android:text="Publisher"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <TextView
            android:id="@+id/D_tv12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/D_tv11"
            android:text="Bandai Namco Entertainment"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="9dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"/>

        <HorizontalScrollView
            android:id="@+id/D_ly2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/D_tv12">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="17dp">

                <ImageView
                    android:id="@+id/D_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/image_shape"/>

                <ImageView
                    android:id="@+id/D_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ss"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="21dp"
                    android:background="@drawable/image_shape"/>
            </LinearLayout>
        </HorizontalScrollView>
        
        <Button
            android:id="@+id/D_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/D_ly2"
            android:width="300dp"
            android:text="Add to Favorite"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="58dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
